# MGUProgramlama

./: .gitignore  LICENSE
ProgramlamayaGiris/: Final.py
ProgramlamayaGiris/1 - Float and Int/: 1 - SampleRate.py  2 - Aliasing.py
ProgramlamayaGiris/2 - List and If/: 0 - List.py  1 - Condition.py  2 - PulseWave.py  2 - SquareWave.py  3 - PulseWidth.py  4 - Compressor.py  4 - Hard Clipper.py  6 - SimpleFilter.py  7 - FilterCoeff.py
ProgramlamayaGiris/Py_SampleRateDemo/: 3 - WhiteNoise.py  samplerate.py
SesProgramlama/Final/: CMakeLists.txt  MGUFinal.jucer
SesProgramlama/Final/Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist
SesProgramlama/Final/Builds/MacOSX/MGUFinal.xcodeproj/: project.pbxproj
SesProgramlama/Final/Builds/VisualStudio2022/: MGUFinal.sln  MGUFinal_SharedCode.vcxproj  MGUFinal_SharedCode.vcxproj.filters  MGUFinal_StandalonePlugin.vcxproj  MGUFinal_VST3.vcxproj  resources.rc
SesProgramlama/Final/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
SesProgramlama/Final/Source/: MGUFinal.h  Main.cpp
SesProgramlama/Vize/GainPlugin/: GainPlugin.jucer
SesProgramlama/Vize/GainPlugin/Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist
SesProgramlama/Vize/GainPlugin/Builds/MacOSX/GainPlugin.xcodeproj/: project.pbxproj
SesProgramlama/Vize/GainPlugin/Builds/VisualStudio2022/: GainPlugin.sln  GainPlugin_SharedCode.vcxproj  GainPlugin_SharedCode.vcxproj.filters  GainPlugin_StandalonePlugin.vcxproj  GainPlugin_VST3.vcxproj  resources.rc
SesProgramlama/Vize/GainPlugin/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
SesProgramlama/Vize/GainPlugin/Source/: Main.cpp
TemelProgramlama/1 - Aliasing/: compile.sh  main.cpp  plotscript.py
TemelProgramlama/2 - Sinewave/: main.cpp
TemelProgramlama/3- Pulsewave/: main.cpp
TemelProgramlama/3- Pulsewave/lib/: wave.cpp
TemelProgramlama/4 - Compressor/: CMakeLists.txt  main.cpp
TemelProgramlama/5 - SimpleFilter/: main.cpp
TemelProgramlama/6 - FilterCoeff/: main.cpp
TemelProgramlama/6 - FilterCoeff/lib/: wave.h
TemelProgramlama/Cpp_SampleRateDemo/: SampleRateDemo.cpp  SampleRateDemo.h  TrueSampleRate.cpp  TrueSampleRate.h  compile.sh  main.cpp  plotscript.py
TemelProgramlama/Final/: CMakeLists.txt  compile.sh  main.cpp
TemelProgramlama/Final/lib/: wave.h
TemelProgramlama/Vize/: CMakeLists.txt  main.cpp
TemelProgramlama/Vize/lib/: wave.cpp
